objects/Industry_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Industry Assignments</relationshipLabel>
        <relationshipName>Industry_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Industry_Classification__c</fullName>
        <label>Industry Classification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Industry_Classification__c.Parent_Industry__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Industry_Classification__c</referenceTo>
        <relationshipLabel>Industry Assignments</relationshipLabel>
        <relationshipName>Industry_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Industry</label>
        <type>Checkbox</type>
    </fields>
    <label>Industry Assignment</label>
    <nameField>
        <displayFormat>INDA-{0000}</displayFormat>
        <label>Industry Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>